--- a/package.json
+++ b/package.json
@@ -7,8 +7,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "pedroavpereira",
-  "license": "ISC",
-  "dependencies": {
-    "bootstrap": "^5.3.2"
-  }
+  "license": "ISC"
 }
